# librascal

./: CMakeLists.txt
bindings/: CMakeLists.txt  bind_include.hh  bind_py_representation_manager.cc  bind_py_structure_manager.cc
examples/: bug_smc_anl_amo.cc  coulomb_example.ipynb  default_functions_for_implementations.cc  example_traits_dependent_function.cc  factory_test.cc  factoty_test.cc  load_problematic_structure.py  soap_profile.cc  spherical_expansion_example.cc  spherical_expansion_example.ipynb  spherical_invariants_example.cc  structure_manager_iteration.cc  structure_skew_example.cc  test_nl.cc  wasserstein.ipynb
scripts/: generate_gauss_legendre_ref_data.py  generate_hyp1f1_ref_data.py  generate_kernel_ref_data.py  generate_modified_bessel_first_kind_ref_data.py  generate_sorted_coulomb_ref_data.py  generate_spherical_covariant_ref_data.py  generate_spherical_expansion_ref_data.py  (+2 more)
tests/: CMakeLists.txt  test_adaptor.hh  test_adaptor_strict.cc  test_atomic_structure.cc  test_calculator.cc  test_calculator.hh  test_feature_manager.cc  test_kernels.hh  test_manager_collection.hh  test_math.hh  test_math_gauss_legendre.cc  test_math_hyp1f1.cc  test_math_modified_bessel_first_kind.cc  test_math_spherical_harmonics.cc  test_properties.cc  test_properties.hh  test_representation_manager.cc  test_representation_manager.hh  test_runner.cc  test_structure.hh
tests/data/: kernel_reference.ubjson  sorted_coulomb_reference.ubjson  spherical_covariants_reference.ubjson
tests/python/: python_binding_tests.py  python_representation_calculator_test.py  python_structure_manager_test.py
tests/reference_data/: modified_bessel_first_kind_reference.ubjson
(+32 files in other folders)
